--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,5 @@
 </div>
 
 <app-orbit-counts [satellites]="displayList"></app-orbit-counts>
-
+ccccc
 <!-- TODO 1: add list component to app HTML -->
