--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-orbit-list></app-orbit-list>
 <h1>Orbit Report</h1>
 
 <div class="search-form">
@@ -5,6 +6,7 @@
 	<button (click)="search(searchTerm.value);">Search</button>
 </div>
 
+
 <app-orbit-counts [satellites]="displayList"></app-orbit-counts>
-ccccc
+
 <!-- TODO 1: add list component to app HTML -->
