--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,6 +1,13 @@
+
 <h3>Satellite Count:</h3>
-<div class="counts">
-	<div>Total: <span class="counts-total">NaN</span></div>
+<div class="counts" *ngFor = 'let satellite of satellites'>
+	<div>Total: <span class="counts-total">{{satellites.length}}</span></div>
+	<div> Space Debris: <span class="counts-total"></span>{{satellite.type}}</div>
+	<div> Communication: <span class="counts-total"></span>{{satellite.type}}</div>
+	<div> Positioning: <span class="counts-total"></span>{{satellite.type}}</div>
+	<div> Probe: <span class="counts-total"></span>{{satellite.type}}</div>
+	<div> Space Station: <span class="counts-total"></span>{{satellite.type}}</div>
+	<div> Telescope: <span class="counts-total"></span>{{satellite.type}}</div>
 </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
